kubernetes_part/1-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: eslamadel2/front:latest
        ports:
        - containerPort: 3000
        # env:
        # - name: REACT_APP_API_URL
        #   value: http://backend:3001/api
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30150
  selector:
    app: frontend
